package minesweeper;

public interface Controller {}
