package minesweeper;

public enum Difficulty {
    EASY,
    MEDIUM,
    HARD,
}
