package minesweeper;

public enum GameStatus {
    WIN,
    LOSE,
    CONTINUE,
}
