package minesweeper;

public interface View {
    void update();
}
